# my_tools

./: .gitignore  README.md  my_database.py  my_excelize.py  my_selenium.py  my_spider.py  utils.py
database/: __init__.py  sqlite_async.py
my_excelize/: .flaskenv  my_excelize.py  pyproject.toml
my_excelize/templates/: base.html  index.html  read.html  upload.html  write_excel.html
my_excelize/upload/: model.xlsx
utils/: __init__.py
utils/generate_str_time/: main.py
utils/little/: __init__.py  main.py
utils/system_tools/: __init__.py  main.py
utils/web/: __init__.py
